# rt-event-tracker

./: .gitignore  LOG.md  README.md  SNSCRAPE_DOC.md  pyproject.toml  snscraper_twitter_lib_doc.md
app/: app.py
app/modules/: ner.py  newsparser.py  nlp.py  sample_data.py  twitter_scraper.py
app/modules/files/: news_feeds.txt
app/modules/tests/: test_newsparser.py
app/modules/tests/test_files/: test_file_to_set.txt
app/samples/: sample-2023-03-15 17:56:59.049653.txt  sample-2023-03-15 22:42:20.874933.txt  sample-common-2023-03-16 17:30:04.206590.txt  sample-common-entity-sets-2023-03-16 17:36:05.480578.txt  sample-common-entity-sets-2023-03-16 23:42:47.432661.txt  sample-common-entity-sets-2023-03-16 23:51:05.700460.txt  sample-common-entity-sets-2023-03-18 14:48:18.518820.txt  sample-news-2023-03-16 17:30:04.206243.txt  sample-news-2023-03-16 17:36:05.480268.txt  sample-news-2023-03-18 14:48:18.518323.txt
app/tests/: test_ner.py  test_newsparser.py  test_nlp.py
app/tests/test_files/: test_aggregate.txt  test_parse_feed.xml  test_parse_feed_rdf.xml  test_parse_feed_unsuccesful.xml
