[tool.poetry]
name = "real-time event tracker"
version = "0.1.0"
description = "A web application with the goal of helping anyone interested (news enthusiasts, journalists, researchers) to track the development of world events live through twitter data."
authors = ["samuelgrootwassink <sgrootwassink@gmail.com>"]
license = "GNU GPL 3.0"
readme = "README.md"
packages = [{include = "real_time event tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
postgresqlite = "^0.3.1"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^3.0.3"
pandas = "^1.5.3"
nltk = "^3.8.1"
unidecode = "^1.3.6"
requests = "^2.28.2"
tweepy = "^4.13.0"

[tool.poetry.group.dev.dependencies]
pgcli = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
